support to pipeline plugin

--- a/src/main/resources/org/jenkinsci/plugins/rabbitmqbuildtrigger/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/rabbitmqbuildtrigger/Messages.properties
@@ -2,3 +2,5 @@ RabbitMQBuildTrigger=\
     RabbitMQ Build Trigger
 RabbitMQBuildPublisher=\
     Publish build result to RabbitMQ
+RabbitMQSendStepDisplayName=Send message to RabbitMQ
+RabbitMQSendStepConfig=RabbitMQ Send Pipeline step - exchange: {0}, routingKey: {1}, message {2}
